--- a/backend/myproject/blog/templates/blog/index.html
+++ b/backend/myproject/blog/templates/blog/index.html
@@ -32,7 +32,7 @@
                     <span class="date">Published on January 1, 2024</span>
                 </div>
                 <div class="post-content">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi....</p>
+                    <p>Welcome all to my Blog Website </p>
                     <a href="#" class="read-more">Read More</a>
                 </div>
             </article>
