--- a/backend/myproject/blog/static/blog/styles.css
+++ b/backend/myproject/blog/static/blog/styles.css
@@ -13,7 +13,7 @@ body {
 
 header {
     background-color: #333;
-    color: #fff;
+    color: black;
     padding: 20px;
     display: flex;
     justify-content: space-between;
@@ -68,7 +68,7 @@ main {
 .read-more {
     display: inline-block;
     background-color: #333;
-    color: #fff;
+    color: red;
     padding: 5px 10px;
     text-decoration: none;
 }
@@ -87,7 +87,7 @@ main {
 
 footer {
     background-color: #333;
-    color: #fff;
+    color: black;
     padding: 20px;
     text-align: center;
 }
